--- a/Locadora/Views/Genero/Index.cshtml
+++ b/Locadora/Views/Genero/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<Locadora.Models.Genero>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Gênero";
 }
 
-<h1>Index</h1>
+<h2>Gênero</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Cadastrar Gênero</a>
 </p>
 <table class="table">
     <thead>
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.Ativo)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.GeneroId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.GeneroId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.GeneroId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.GeneroId">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.GeneroId">Detalhar</a> |
+                <a asp-action="Delete" asp-route-id="@item.GeneroId">Deletar</a>
             </td>
         </tr>
 }
