--- a/Locadora/Views/Filme/Delete.cshtml
+++ b/Locadora/Views/Filme/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Deletar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem certeza que deseja deletar?</h3>
 <div>
     <h4>Filme</h4>
     <hr />
@@ -37,9 +37,9 @@
         </dd class>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="Deletar">
         <input type="hidden" asp-for="FilmeId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Deletar" class="btn btn-danger" /> |
+        <a asp-action="Index">Voltar para a Lista</a>
     </form>
 </div>
