--- a/Locadora/Views/Genero/Delete.cshtml
+++ b/Locadora/Views/Genero/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h2>Deletar</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h4>Tem certeza que deseja deletar?</h4>
 <div>
-    <h4>Genero</h4>
+    <h4>Gênero</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -33,7 +33,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="GeneroId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Deletar" class="btn btn-danger" /> |
+        <a asp-action="Index">Voltar para a Lista</a>
     </form>
 </div>
