--- a/Locadora/Views/Locacao/Details.cshtml
+++ b/Locadora/Views/Locacao/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalhes</h1>
 
 <div>
-    <h4>Locacao</h4>
+    <h4>Locação</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -25,6 +25,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.LocacaoId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.LocacaoId">Editar</a> |
+    <a asp-action="Index">Voltar para a Lista</a>
 </div>
