--- a/Locadora/Views/Locacao/Edit.cshtml
+++ b/Locadora/Views/Locacao/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Editar</h1>
 
-<h4>Locacao</h4>
+<h4>Locação</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -68,7 +68,7 @@
 </table>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar para a Lista</a>
 </div>
 
 @section Scripts {
