--- a/Locadora/Views/Locacao/Index.cshtml
+++ b/Locadora/Views/Locacao/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<Locadora.Models.Locacao>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Locação";
 }
 
-<h1>Index</h1>
+<h2>Locação</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Cadastrar Locação</a>
 </p>
 <table class="table">
     <thead>
@@ -31,9 +31,9 @@
                 @Html.DisplayFor(modelItem => item.DataLocacao)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.LocacaoId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.LocacaoId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.LocacaoId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.LocacaoId">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.LocacaoId">Detalhar</a> |
+                <a asp-action="Delete" asp-route-id="@item.LocacaoId">Deletar</a>
             </td>
         </tr>
 }
